objects/EUR_CRM_Contract_Tracker__c.object
<CustomObject>
    <description>New Object to replace Competitor Contract Tracking (EU)</description>
    <fields>
        <fullName>EUR_CRM_Account_Owners_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a field newly created for PR UK. It will automatically populated as Account&apos;s Manager by trigger.</description>
        <label>Account Owner&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts_Tracker_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Contract Tracker (EU)</relationshipLabel>
        <relationshipName>Contract_Tracker_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>EUR_CRM_Category__c</referenceTo>
        <relationshipLabel>Contract Tracker (EU)</relationshipLabel>
        <relationshipName>Contract_Tracker_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Möet Hennessy</fullName>
                </value>
                <value>
                    <fullName>Bacardi</fullName>
                </value>
                <value>
                    <fullName>Bourchanin</fullName>
                </value>
                <value>
                    <fullName>Ebertec</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Goods</fullName>
                </value>
                <value>
                    <fullName>Grand Sud Import</fullName>
                </value>
                <value>
                    <fullName>Drinks</fullName>
                </value>
                <value>
                    <fullName>Bacardi-Martini</fullName>
                </value>
                <value>
                    <fullName>Maxxium</fullName>
                </value>
                <value>
                    <fullName>Brown-Forman</fullName>
                </value>
                <value>
                    <fullName>LVMH</fullName>
                </value>
                <value>
                    <fullName>Roust</fullName>
                </value>
                <value>
                    <fullName>Synergy</fullName>
                </value>
                <value>
                    <fullName>Luding</fullName>
                </value>
                <value>
                    <fullName>Avendi</fullName>
                </value>
                <value>
                    <fullName>Transimport</fullName>
                </value>
                <value>
                    <fullName>Cuervo</fullName>
                </value>
                <value>
                    <fullName>William Grant &amp; Sons</fullName>
                </value>
                <value>
                    <fullName>SofStok</fullName>
                </value>
                <value>
                    <fullName>Campari</fullName>
                </value>
                <value>
                    <fullName>Beam Suntory</fullName>
                </value>
                <value>
                    <fullName>Edrington Group</fullName>
                </value>
                <value>
                    <fullName>HBCC</fullName>
                </value>
                <value>
                    <fullName>Marie Brizard</fullName>
                </value>
                <value>
                    <fullName>Edrington</fullName>
                </value>
                <value>
                    <fullName>Conaxess</fullName>
                </value>
                <value>
                    <fullName>Hans Just</fullName>
                </value>
                <value>
                    <fullName>Just Drinks</fullName>
                </value>
                <value>
                    <fullName>Hela Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Description__c</fullName>
        <label>Contract Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Size__c</fullName>
        <description>This is newly created for BG.
https://basecamp.com/2036369/projects/10425694/todos/247839489</description>
        <label>Contract Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Note__c</fullName>
        <description>Newly created for PR BG on 20160414</description>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Type_of_contract__c</fullName>
        <label>Type of contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne contract</fullName>
                </value>
                <value>
                    <fullName>Spirits contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initially for GB Phase 2</description>
        <label>Visit (EU)</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipLabel>Contracts Tracker (EU)</relationshipLabel>
        <relationshipName>Contracts_Tracker_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Tracker (EU)</label>
    <listViews>
        <fullName>EUR_BG_Contract_Tracker</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Contract_Description__c</columns>
        <columns>EUR_CRM_Competitor__c</columns>
        <columns>EUR_CRM_Contract_End_Date__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker__c.EUR_BG_Competitor_Contract_Tracker</value>
        </filters>
        <label>EUR BG Contract Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Contract_Tracker_1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Contract_Description__c</columns>
        <columns>EUR_CRM_Competitor__c</columns>
        <columns>EUR_CRM_Contract_End_Date__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker__c.EUR_DK_Competitor_Contract_Tracker,EUR_CRM_Contract_Tracker__c.EUR_DK_PR_Contract_Tracker</value>
        </filters>
        <label>EUR DK Contract Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_Contract_Tracker</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Contract_Description__c</columns>
        <columns>EUR_CRM_Competitor__c</columns>
        <columns>EUR_CRM_Contract_End_Date__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker__c.EUR_MA_Competitor_Contract_Tracker</value>
        </filters>
        <label>EUR MA Contract Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Contract_Tracker</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Contract_Description__c</columns>
        <columns>EUR_CRM_Competitor__c</columns>
        <columns>EUR_CRM_Contract_End_Date__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Tracker__c.EUR_RU_Competitor_Contract_Tracker</value>
        </filters>
        <label>EUR RU Contract Tracker</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CTT-{0000000000}</displayFormat>
        <label>Contract Tracker No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts Tracker (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Competitor_Contract_Tracker</fullName>
        <active>true</active>
        <label>EUR BE Competitor Contract Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Competitor_Contract_Tracker</fullName>
        <active>true</active>
        <label>EUR BG Competitor Contract Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Competitor_Contract_Tracker</fullName>
        <active>true</active>
        <description>Record Type for DK Competitor Contract Tracker</description>
        <label>EUR DK Competitor Contract Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_PR_Contract_Tracker</fullName>
        <active>true</active>
        <description>Record Type for DK PR Contract Tracker</description>
        <label>EUR DK PR Contract Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Competitor_Contract_Tracker</fullName>
        <active>true</active>
        <label>EUR MA Competitor Contract Tracker</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Competitor_Contract_Tracker</fullName>
        <active>true</active>
        <label>EUR RU Competitor Contract Tracker</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>